# voice_assistant

./: .env.example  .gitignore  LICENSE  README.md  common_makefile.mk  docker-compose.yml  package-lock.json  package.json
.github/workflows/: assign-pr-author.yaml  check-pr.yaml  publish-changes.yaml
src/assistant/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/assistant/alembic/: env.py
src/assistant/alembic/versions/: 2023-10-02_9749b063b095_added_initial_table.py  2023-10-12_3d448c6327cd_init_commit.py
src/assistant/lib/agent/: __init__.py  chat_repository.py  models.py  openai_functions.py  orm_models.py  repositories.py  services.py
src/assistant/lib/agent/repositories/: __init__.py  chat_repository.py  embedding_repository.py  openai_functions.py
src/assistant/lib/api/v1/handlers/: __init__.py  agent.py  tts.py  voice_responce_handler.py
src/assistant/lib/api/v1/handlers/health/: liveness_probe.py
src/assistant/lib/api/v1/schemas/: __init__.py  base.py
src/assistant/lib/app/: app.py  settings.py
src/assistant/lib/app/split_settings/: __init__.py  agent.py  openai.py  postgres.py  proxy.py  voice.py
src/assistant/lib/app/split_settings/tts/: __init__.py  eleven_labs.py  yandex.py
src/assistant/lib/clients/: __init__.py  http_client.py
src/assistant/lib/models/: __init__.py  agent.py  chat_history.py  embedding.py  movies.py  stt_voice.py  token.py
src/assistant/lib/models/orm/: __init__.py  base.py
src/assistant/lib/models/tts/: __init__.py  base.py  models.py
src/assistant/lib/models/tts/voice/: __init__.py  base.py  eleven_labs.py  languages.py  yandex.py
src/assistant/lib/orm_models/: __init__.py  base.py  chat_history.py  movies.py
src/assistant/lib/stt/: __init__.py  models.py  openai_speech.py  repositories.py  services.py  stt_protocol.py
src/assistant/lib/tts/: __init__.py  services.py
src/assistant/lib/tts/models/: __init__.py  models.py  protocols.py  repository.py  service.py  utils.py
src/assistant/lib/tts/models/voice/: __init__.py  base.py  eleven_labs.py  yandex.py
src/assistant/lib/tts/repositories/: __init__.py  base.py  eleven_labs.py  yandex.py
src/assistant/tests/core/: settings.py
src/assistant/tests/functional/models/: http.py
src/assistant/tests/functional/src/: test_health.py
src/bot_aiogram/: .env  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/bot_aiogram/tgbot/: settings.py
src/bot_aiogram/tgbot/handlers/: __init__.py  echo.py  user.py  voice.py
src/bot_aiogram/tgbot/middlewares/: __init__.py  environment.py
src/bot_aiogram/tgbot/split_settings/: __init__.py  api.py  tgbot.py  utils.py
src/example/: pyproject.toml
src/example/backend/user/: handlers.py  models.py
src/example/backend/utils/: http.py
src/fastapi/: Dockerfile  Makefile copy  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
src/fastapi/backend/libs/api/models/: mixins.py
src/fastapi/backend/libs/api/services/: token.py
src/fastapi/backend/libs/app/: app.py  logger.py  settings.py
src/fastapi/backend/libs/db/: postgres.py
src/fastapi/lib/api/models/: mixins.py
src/fastapi/lib/api/services/: token.py
src/fastapi/lib/app/: app.py  logger.py
src/fastapi/lib/db/: postgres.py
src/fastapi_app/: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
src/fastapi_app/alembic/: env.py
src/fastapi_app/lib/api/models/: mixins.py
src/fastapi_app/lib/api/schemas/: __init__.py  entity.py
src/fastapi_app/lib/api/services/: token.py
src/fastapi_app/lib/api/v1/dependencies/: token.py
src/fastapi_app/lib/api/v1/handlers/: __init__.py  joke.py
src/fastapi_app/lib/app/: __init__.py  app.py  logger.py  settings.py
src/fastapi_app/lib/app/split_settings/: __init__.py  api.py  app.py  logger.py  postgres.py  project.py  rabbitmq.py
src/fastapi_app/lib/clients/: __init__.py  httpx.py  postgres.py
src/fastapi_app/lib/db/: base.py  postgres.py
src/fastapi_app/lib/db/brokers/: __init__.py  base_broker.py  broker.py  rabbitmq.py
src/fastapi_app/lib/joke/: __init__.py  services.py
src/fastapi_app/lib/models/: __init__.py  base_sqlalchemy.py  broker_message.py
src/fastapi_app/lib/models/orm/: __init__.py  joke.py
src/fastapi_app/lib/utils/: token.py
src/fastapi_app/nginx/: nginx.conf
src/fastapi_app/nginx/templates/: api.conf.template
src/fastapi_example/: .env.example  .lintstagedrc.json  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/fastapi_example/backend/: main.py
src/fastapi_example/backend/user/: handlers.py  repositories.py  services.py
src/fastapi_example/nginx/: nginx.conf
src/python-service/: .gitignore  .lintstagedrc.json  .prettierignore  Dockerfile  Makefile  README.md  pyproject.toml
src/python-service/lib/api/rest/v1/health/: __init__.py  liveness_probe.py
src/python-service/lib/app/: app.py  settings.py
src/python-service/lib/utils/aiohttp/: __init__.py
src/python-service/lib/utils/aiohttp/types/: __init__.py  handler.py
src/template/: .env.example  Dockerfile  Dockerfile.tests  Makefile  docker-compose.tests.yml  entrypoint.sh  pyproject.toml
src/template/lib/app/: __init__.py  settings.py
src/template/lib/app/split_settings/: logger.py
src/template/lib/clients/: postgres.py
src/template/lib/joke/: __init__.py  repository.py  services.py
src/template/lib/models/: __init__.py  joke.py
src/template/lib/models/orm/: base.py
src/template/nginx/: nginx.conf
src/template/nginx/templates/: api.conf.template
src/template/tests/: .env.example  conftest.py  pyproject.toml
src/template/tests/core/split_settings/: __init__.py  api.py  postgres.py  project.py
src/template/tests/functional/models/: http.py
src/template/tests/functional/src/: test_health.py
src/template/tests/unit/src/: test_health.py
src/ypmp-example-monorepo/: Makefile  pyproject.toml
src/ypmp-example-monorepo/tests/: test_functions.py
(+10 files in other folders)
