[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
known_first_party = ["backend", "tests"]
line-length = 120
target-version = ["py311"]

[tool.isort]
line_length = 120
profile = "black"

[tool.poetry]
authors = ["name <name@email.com>"]
description = "FastAPI Template Project using DDD"
name = "FastAPI Exmaple"
version = "0.1.0"

[tool.poetry.dependencies]
black = "^23.9.1"
faker = "^19.6.1"
isort = "^5.12.0"
pylint = "^2.17.5"
pytest = "^7.4.2"
python = "^3.11"
pyupgrade = "^3.11.0"
sort-all = "^1.2.0"
toml-sort = "^0.23.1"

[tool.poetry.dev-dependencies]

[tool.pylint]
disable = [
  "broad-except",
  "consider-using-from-import",
  "consider-using-sys-exit",
  "duplicate-code",
  "missing-docstring",
  "protected-access",
  "too-few-public-methods"
]
ignore-paths = ["^.*venv/.*$"]
max-line-length = 120
recursive = true

[tool.pylint.basic]
argument-rgx = "^_{0,2}[a-z][a-z0-9_]*$"
class-attribute-rgx = "^_{0,2}[a-zA-Z][a-zA-Z0-9_]*$"
variable-rgx = "^_{0,2}[a-z][a-z0-9_]*$"

[tool.pylint.typecheck]
signature-mutators = "click.decorators.option"

[tool.pyright]
exclude = ["**/__pycache__"]
include = ["backend", "tests"]
pythonPlatform = "All"
pythonVersion = "3.11"
reportConstantRedefinition = "none"
reportMissingTypeStubs = "warning"
reportPrivateUsage = "information"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnknownMemberType = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
venv = ".venv"
venvPath = '.'

[tool.tomlsort]
all = true
in_place = true
