[tool.poetry]
name = "fastapi-app/tests"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
httpx = "^0.25.0"
pytest-asyncio = "^0.21.1"
multidict = "^6.0.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
psycopg2-binary = "^2.9.7"
fastapi = "0.103.1"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
python-jose = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
